Update repositories and services for UUID support