@@ -459,7 +459,7 @@ public class GermplasmService {
 	public GermplasmEntity getGermplasmEntity(String germplasmDbId, HttpStatus errorStatus)
 			throws BrAPIServerException {
 		GermplasmEntity germplasm = null;
-		Optional<GermplasmEntity> entityOpt = germplasmRepository.findById(germplasmDbId);
+		Optional<GermplasmEntity> entityOpt = germplasmRepository.findById(UUID.fromString(germplasmDbId));
 		if (entityOpt.isPresent()) {
 			germplasm = entityOpt.get();
 			germplasmRepository.refresh(germplasm);
@@ -479,7 +479,7 @@ public class GermplasmService {
 	}
 
 	public void deleteGermplasmBatch(List<String> germplasmDbIds) {
-		germplasmRepository.deleteAllByIdInBatch(germplasmDbIds);
+		germplasmRepository.deleteAllByIdInBatch(germplasmDbIds.stream().map(UUID::fromString).toList());
 	}
 
 	public void softDeleteGermplasmBatch(List<String> germplasmDbIds) {
@@ -491,7 +491,7 @@ public class GermplasmService {
 		softDeleteGermplasm(germplasmDbId);
 
 		// Hard delete the list
-		germplasmRepository.deleteAllByIdInBatch(Arrays.asList(germplasmDbId));
+		germplasmRepository.deleteAllByIdInBatch(List.of(UUID.fromString(germplasmDbId)));
 	}
 
 	public void softDeleteGermplasm(String germplasmDbId) throws BrAPIServerException {
@@ -750,7 +750,7 @@ public class GermplasmService {
 			TaxonEntity newEntity = new TaxonEntity();
 			newEntity.setGermplasm(entity);
 			newEntity.setSourceName(taxonId.getSourceName());
-			newEntity.setTaxonId(taxonId.getTaxonId());
+			newEntity.setTaxonId(UUID.fromString(taxonId.getTaxonId()));
 			entity.getTaxonIds().add(newEntity);
 		}
 	}
@@ -903,7 +903,7 @@ public class GermplasmService {
 	private TaxonID convertFromEntity(TaxonEntity entity) {
 		TaxonID taxonId = new TaxonID();
 		taxonId.setSourceName(entity.getSourceName());
-		taxonId.setTaxonId(entity.getTaxonId());
+		taxonId.setTaxonId(entity.getTaxonId().toString());
 		return taxonId;
 	}
 
